atm-keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
spec:
  ports:
    - port: 8088
      protocol: TCP
      targetPort: 8080
  selector:
    app: keycloak
